2008-06-08  Per Bothner  <per@bothner.com>

	* LispReader.java (makePair): Remove unused method.
	(setCdr): Use setCdrBackdoor, since pairs may be PairWithPosition.

2008-06-01  Per Bothner  <per@bothner.com>

	* LangObjType.java (vectorType, stringType, listType): New Type statics.
	(emitIsInstance): Optimize cases that are a plain Java type.

2007-11-02  Per Bothner  <per@bothner.com>

	* LangObjType.java (integerType): New field, represents the
	"integer" type, using gnu.math.IntNum, but with conversions.
	* LangObjType.java (getField, getMethod): New methods.
	* LangPrimType.java (compare): If other is LangObjType,
	let it handle the compare.

2007-03-31  Per Bothner  <per@bothner.com>

	* LispReader.java (parseNumber): Don't try to parse quantities.
	Because unit names are context-dependent, better to parse quantities
	at name-resolution-time.
	(lookupUnit): Remove method.
	(handleToken): Don't check for potentialNumber, since it doesn't
	recognize quantities.

2007-03-06  Per Bothner  <per@bothner.com>

	* LispReader.java (readSpecial): Handle #!abstract.

2007-02-18  Per Bothner  <per@bothner.com>

	* DefineNamespace.java: Update for symbol representation changing
	from String to Symbol and strings changing tO CharSequence.
	* LispReader.java: Likewise.
	* ReaderDispatch.java: Likewise: Pass Symbol to ReaderQuote.
	* ReadTable.java: Likewise.
	(makeSymbol): Change to return SimpleSymbol.
	* ReaderString.java (read): Change to return String rather
	than FString, assuming we're using CharSequence.
	* LispLanguage.java (lookup_sym): Change type to Symbol.
	* LispReader.java (parseNumber(CharSequence,int)): New method.

	* LispReader.java (validPostfixLookupStart): Allow unquote.

	* LispLanguage.java (checkDefaultBinding): New method.
	* LangObjType.java (typeClass, typeType, typeClassType): New constants.
	(compare, emitTestIf, emitCoerceFromObject): Handle new types.
	(coerceToClassOrNull. coerceToClass, coerceToClassTypeOrNull,